First steps into Rakefile

--- a/samples/plainc/Rakefile
+++ b/samples/plainc/Rakefile
@@ -2,10 +2,9 @@
 #  Rakefile  --  build some libraries
 #
 
-# require "autorake"
+require "autorake"
 
-puts "++++ " + inspect
 task :foo do
-  puts "**** " + inspect
+  puts parameter(:foo)
 end
 
